# Snapdragon

./: .editorconfig  .gitattributes  .gitignore  LICENSE  Makefile  README.md  compose.override.yml  config.py  docker-compose.light.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  ruff.toml
ai_ml/: .dockerignore  config.py
ai_ml/fall_detection/: Dockerfile  app.py  eda.py  example.env  fall_detection.py  pyproject.toml  train.py
ai_ml/ppe_detection/: Dockerfile  app.py  camera.py  drawing.py  example.env  inference.py  ppe_detection.py  pyproject.toml  requirements-snapdragon.txt  roi.json  run_pose.py  virtual_fencing.py
ai_ml_/: config.py
app/: .dockerignore  Dockerfile  docker-entrypoint.sh  example.env  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
gateway/: Dockerfile  app.py  example.env  pyproject.toml
gateway/mosquitto/: acl.conf  mosquitto.conf
gateway/src/gateway/: __init__.py  bootstrap.py  config.py  logging_config.py  main.py
gateway/src/gateway/api/: __init__.py
gateway/src/gateway/api/http/: __init__.py  deps.py  detections.py  events.py  health.py  helmets.py  metrics.py  middleware.py  status.py  telemetry.py
gateway/src/gateway/api/ws/: __init__.py  deps.py  protocol.py  stream.py
gateway/src/gateway/application/: __init__.py  detection_service.py  device_registry.py  device_state_manager.py  ingestion_service.py  ports.py  service_health.py  subscription_service.py
gateway/src/gateway/domain/: __init__.py
gateway/src/gateway/domain/common/: __init__.py  errors.py  identifiers.py
gateway/src/gateway/domain/detection/: __init__.py  models.py
gateway/src/gateway/domain/events/: __init__.py  models.py  types.py
gateway/src/gateway/domain/helmets/: __init__.py  models.py
gateway/src/gateway/domain/telemetry/: __init__.py  models.py  sensors.py  validation.py
gateway/src/gateway/infrastructure/: __init__.py
gateway/src/gateway/infrastructure/bus/: __init__.py  in_memory.py  redis_streams.py
gateway/src/gateway/infrastructure/metrics/: __init__.py  registry.py
gateway/src/gateway/infrastructure/ml_clients/: __init__.py  base.py  errors.py  fall_client.py  mock_fall_client.py  mock_ppe_client.py  ppe_client.py
gateway/src/gateway/infrastructure/mqtt/: __init__.py  adapter.py  command_publisher.py  presence.py
gateway/src/gateway/infrastructure/persistence/: __init__.py  in_memory.py  postgres.py  sqlite.py
gateway/src/gateway/infrastructure/registry/: __init__.py  in_memory.py
gateway/src/gateway/workers/: __init__.py  pipeline.py  processor_worker.py
gateway/src/gateway/workers/processors/: __init__.py  fall_detection_processor.py  persistence_processor.py
(+120 files in other folders)
