[project]
name = "gateway"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "httpx",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",
    "redis>=5.0",
    "aiosqlite>=0.20",
    "prometheus-client>=0.20",
    "asyncpg>=0.30",
    "aiomqtt>=2.0",
]
