[project]
name = "fall-detection"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "numpy",
]

[dependency-groups]
dev = ["black>=24.0"]
train = [
    "matplotlib",
    "scikit-learn",
    "onnxruntime",
    "onnx",
    "torch",
    "torchvision",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
